--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,11 @@ dependencies:
   cupertino_icons: ^1.0.8
   sqflite: ^2.3.0
   sqflite_common_ffi: ^2.3.0
+  sqflite_common_ffi_web: ^0.4.2
   path: ^1.8.3
   http: ^1.1.0
   shared_preferences: ^2.2.2
+  universal_io: ^2.2.2
 
 dev_dependencies:
   flutter_test:
