Add MySQL-aware login flow with theme and account controls

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   http: ^1.1.0
   shared_preferences: ^2.2.2
   universal_io: ^2.2.2
+  mysql1: ^0.20.0
+  crypto: ^3.0.3
 
 dev_dependencies:
   flutter_test:
